# agent-swarm-dev

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  DOWNLOAD_SYNAPSE.md  Dockerfile  Dockerfile.fastembed  Dockerfile.rust-gateway  README.md  ROADMAP.md  SKILL.md  SPEC.md  apicentric.toml  consolidated_wisdom.ttl  docker-compose.yml  feature_y.py  generate_proto.sh  litellm_error.json  main_autonomous.py  migrate_fractal.py  migrate_fractal_embeddings.py  migrate_skills.py  organizational_knowledge.txt  package.json  render.yaml  requirements.txt  security_policy.nt  swarm_schema.yaml  test_feature_y.py  test_proto.py  tools_fractal.py
.mcp/: config.json
agents/: analyst.py  architect.py  coder.md  coder.py  deployer.py  memory.py  monitor_service.py  orchestrator.py  product_manager.py  reviewer.py  telegram_bot.py
codegraph-engine/: Cargo.toml  build.rs
codegraph-engine/proto/: codegraph.proto
codegraph-engine/src/: indexer.rs  main.rs  parser.rs  service.rs  slicer.rs
commander-dashboard/: package-lock.json  package.json  vite.config.ts
config/: swarm.json
deploy/: vercel.json
docs/: OPENSPEC.md  SECURITY.md  api-v1-compatibility.md
lib/: code_graph_slicer.py  gateway_runtime.py  git_service.py  llm.py  trello_bridge.py
scenarios/: sanity_suite.yaml
scripts/: deploy.sh  embeddings_server.py  ensure_synapse_engine.sh  export_godot_web.sh  ingest_knowledge_grpc.py  init_swarm.sh  kilo_interactive.py  load_schema_grpc.py  migrate_fractal.py  migrate_fractal_embeddings.py  onboarding.py  run_agent.sh  run_trello_bridge.py  semantic_bridge.py  semantic_bridge_prototype.py  setup_apicentric.sh  setup_synapse.sh  simple_synapse_client.py  simulate_failures.py  start_all.sh  start_gateway.py  start_synapse.sh  swarm_flow.py  swarm_mcp.py  synapse_agent.py  synapse_client.py  synapse_docker.sh  synapse_mcp.py  test_embeddings.py  test_flow.py  test_visualizer_logic.py
security_restrictions/: restriction_11cbba11-dda1-4210-9249-68b79bc42edc.ttl
swarmd/: Cargo.toml  build.rs
swarmd/src/: chaos.rs  cli_main.rs  config.rs  discovery.rs  main.rs  notifications.rs
swarmd/src/cli/: app.rs  handlers.rs  mod.rs  ui.rs
swarmd/src/server/: contracts.rs  mod.rs  routes.rs
swarmd/src/workers/: agency.rs  mod.rs  telegram.rs  trello.rs
synapse-engine/: README.md
tests/: conftest.py  test_analyst_nested.py  test_analyst_perf.py  test_budget_warning.py  test_budgeting.py  test_character_lab_hydration_guard.py  test_code_parser_perf_cursor.py  test_codegraph.py  test_context_hybrid_search.py  test_ensure_synapse_engine.py  test_executor.py  test_gateway.py  test_gateway_containerization.py  test_godot_project_generator.py  test_godot_web_export_script.py  test_kill_switch.py  test_kilo_tools.py  (+5 more)
(+1493 files in other folders)
