[package]
name = "codegraph-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.15"
tonic = "0.11.0"
prost = "0.12.4"
tree-sitter = "0.22.6"
tree-sitter-python = "0.21.0"
tree-sitter-rust = "0.21.2"
tree-sitter-javascript = "0.21.4"
tree-sitter-cpp = "0.22.0"
reqwest = { version = "0.12.4", features = ["json"] }
rayon = "1.10.0"
ignore = "0.4.22"
sha2 = "0.10.8"
hex = "0.4.3"

[build-dependencies]
tonic-build = "0.11.0"
